--- a/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
@@ -3,10 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     xmlns:vm="clr-namespace:eTools_Ultimate.ViewModels.Pages"
     Title="ResourcePath"
     d:DataContext="{d:DesignInstance Type=vm:ResourcePathViewModel,
@@ -701,11 +701,7 @@
                     </Grid>
 
                     <!--  AI Assignment Titel als Information  -->
-                    <TextBlock
-                        Margin="0,10,0,0"
-                        FontSize="16"
-                        FontWeight="Bold"
-                        Text="{i18n:StringLocalizer 'AII_ Assignment'}" />
+                    <TextBlock Margin="0,10,0,0" Text="{i18n:StringLocalizer 'Mover types configuration'}" />
 
                     <!--  AI Assignment Container innerhalb der Mover Sektion  -->
                     <Grid Margin="0,10,0,12">
@@ -727,22 +723,24 @@
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="150" />
                                 </Grid.RowDefinitions>
-                                
+
                                 <!--  Header  -->
                                 <TextBlock
                                     Grid.Row="0"
                                     Margin="10,10,10,5"
                                     FontWeight="SemiBold"
                                     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                    Text="{i18n:StringLocalizer 'Available Resources'}" />
-                                
+                                    Text="{i18n:StringLocalizer 'Mover types'}" />
+
                                 <!--  ListView  -->
                                 <ListView
+                                    x:Name="MoverTypeBindingTypeListView"
                                     Grid.Row="1"
                                     Margin="5,0,5,5"
                                     Background="Transparent"
                                     BorderThickness="0"
-                                    ItemsSource="{Binding AvailableResources}"
+                                    IsSynchronizedWithCurrentItem="True"
+                                    ItemsSource="{Binding Settings.MoverTypesBindings}"
                                     SelectionMode="Single">
                                     <ListView.ItemContainerStyle>
                                         <Style TargetType="ListViewItem">
@@ -762,14 +760,7 @@
                                     <ListView.ItemTemplate>
                                         <DataTemplate>
                                             <StackPanel Margin="5">
-                                                <TextBlock
-                                                    FontWeight="SemiBold"
-                                                    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                                    Text="{Binding Name}" />
-                                                <TextBlock
-                                                    FontSize="12"
-                                                    Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                                                    Text="{Binding Type}" />
+                                                <TextBlock Foreground="{DynamicResource TextFillColorPrimaryBrush}" Text="{Binding Key}" />
                                             </StackPanel>
                                         </DataTemplate>
                                     </ListView.ItemTemplate>
@@ -796,22 +787,22 @@
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="150" />
                                     </Grid.RowDefinitions>
-                                    
+
                                     <!--  Header  -->
                                     <TextBlock
                                         Grid.Row="0"
                                         Margin="10,10,10,5"
                                         FontWeight="SemiBold"
                                         Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                        Text="{i18n:StringLocalizer 'Assigned Resources'}" />
-                                    
+                                        Text="{i18n:StringLocalizer 'Assigned AI'}" />
+
                                     <!--  ListView  -->
                                     <ListView
                                         Grid.Row="1"
                                         Margin="5,0,5,5"
                                         Background="Transparent"
                                         BorderThickness="0"
-                                        ItemsSource="{Binding AssignedResources}"
+                                        ItemsSource="{Binding SelectedItem.Value, Mode=OneWay, ElementName=MoverTypeBindingTypeListView}"
                                         SelectionMode="Single">
                                         <ListView.ItemContainerStyle>
                                             <Style TargetType="ListViewItem">
@@ -831,14 +822,7 @@
                                         <ListView.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Margin="5">
-                                                    <TextBlock
-                                                        FontWeight="SemiBold"
-                                                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                                        Text="{Binding Name}" />
-                                                    <TextBlock
-                                                        FontSize="12"
-                                                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                                                        Text="{Binding Type}" />
+                                                    <TextBlock Foreground="{DynamicResource TextFillColorPrimaryBrush}" Text="{Binding}" />
                                                 </StackPanel>
                                             </DataTemplate>
                                         </ListView.ItemTemplate>
@@ -853,9 +837,9 @@
                                 VerticalAlignment="Top"
                                 Orientation="Vertical">
                                 <Button
-                                    Margin="0,0,0,10"
                                     Width="60"
                                     Height="40"
+                                    Margin="0,0,0,10"
                                     Command="{Binding AddResourceCommand}"
                                     ToolTip="{i18n:StringLocalizer 'Add'}">
                                     <ui:SymbolIcon Symbol="Add24" />
