--- a/eTools Ultimate/Views/Pages/DashboardPage.xaml
+++ b/eTools Ultimate/Views/Pages/DashboardPage.xaml
@@ -29,14 +29,6 @@
                 CornerRadius="12"
                 Cursor="Hand"
                 Tag="{Binding}">
-                <Border.Effect>
-                    <DropShadowEffect
-                        BlurRadius="10"
-                        Direction="270"
-                        Opacity="0.3"
-                        ShadowDepth="2"
-                        Color="Black" />
-                </Border.Effect>
                 <Border.Style>
                     <Style TargetType="Border">
                         <Style.Triggers>
@@ -75,7 +67,7 @@
                         Width="42"
                         Height="42"
                         Margin="0,0,0,5"
-                        HorizontalAlignment="Left"
+                        HorizontalAlignment="Center"
                         VerticalAlignment="Top"
                         RenderOptions.BitmapScalingMode="HighQuality"
                         RenderOptions.EdgeMode="Aliased"
@@ -89,7 +81,7 @@
                     <TextBlock
                         Grid.Row="1"
                         Margin="0,0,0,5"
-                        HorizontalAlignment="Left"
+                        HorizontalAlignment="Center"
                         VerticalAlignment="Top"
                         FontSize="18"
                         FontWeight="SemiBold"
@@ -100,7 +92,7 @@
                     <TextBlock
                         Grid.Row="2"
                         Margin="0,0,0,20"
-                        HorizontalAlignment="Left"
+                        HorizontalAlignment="Center"
                         VerticalAlignment="Top"
                         FontSize="14"
                         Foreground="#CCCCCC"
